--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "minireset.css": "^0.0.7",
     "next": "13.4.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.63.6"
   }
+  
 }
